# LLM_App_Final

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_EN.md  app.py  main.py  pyproject.toml  requirements.txt  run.bat  start.sh  utils.py  文件中心.py  首页.py
.VSCodeCounter/2024-12-11_15-17-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.streamlit/: config.toml
deployment/: DOCKER.md  docker-compose.api.yml  docker-compose.full.yml  docker-compose.yml
dev_scripts/: build.py
docs/: API_BACKEND.md  api_reference.md  architecture.md  migration_guide.md  refactor_summary.md
docs/api/: README.md
frontend/: .env.example  .env.production.example  .npmignore  ENV_CONFIG.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/docs/: performance_report.md
frontend/e2e/: auth.spec.ts  documents.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: RequireAuth.tsx
frontend/src/components/common/: MarkdownRenderer.tsx  ThemeToggle.tsx
frontend/src/components/features/auth/: AuthForm.tsx
frontend/src/components/features/dashboard/: StatCard.tsx
frontend/src/components/features/files/: FavoriteButton.tsx  FileUpload.tsx
frontend/src/components/providers/: QueryProvider.tsx  ToastProvider.tsx
frontend/src/hooks/: useTaskWebSocket.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: mindmapUtils.ts
frontend/src/pages/: Dashboard.tsx  Documents.tsx  Login.tsx  Settings.tsx  Workspace.tsx
frontend/src/services/: api.ts  http.ts
frontend/src/stores/: authStore.ts  taskStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
logs/: README.md
pages/: 1_🤓_原文提取.py  2_😶‍🌫️_论文总结.py  4_🤖_论文问答.py  5_✒️_文段优化.py  5_✒️_文段改写.py  6_🤯_思维导图.py
specs/001-fastapi-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fastapi-backend/checklists/: requirements.md
specs/001-fastapi-backend/contracts/: auth.yaml  documents.yaml  files.yaml  statistics.yaml  tasks.yaml  users.yaml
specs/001-integrate-real-apis/: spec.md
specs/001-integrate-real-apis/checklists/: requirements.md
specs/002-modern-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-modern-frontend/checklists/: requirements.md
specs/002-modern-frontend/contracts/: api-mapping.md  openapi-subset.json
src/api/: deps.py  errors.py  websocket.py
src/api/routers/: auth.py  documents.py  files.py  statistics.py  tasks.py  users.py
src/background_tasks/: task_queue.py  tasks.py
src/core/: config.py  exceptions.py  logger.py  rate_limit.py  security.py
src/db/: database.py  init_db.py
src/llm_app/: config.py  main.py
src/llm_app/api/: deps.py  errors.py  llm_client.py  websocket.py
src/llm_app/api/routers/: auth.py  documents.py  files.py  statistics.py  tasks.py  users.py
src/llm_app/background_tasks/: task_queue.py  tasks.py
src/llm_app/core/: auth.py  config.py  database.py  file_handler.py  logger.py  optimizer.py  rate_limit.py  security.py  text_processor.py
src/llm_app/db/: database.py  init_db.py  session.py
src/llm_app/db/migrations/: add_is_favorite.py
src/llm_app/models/: __init__.py  content.py  file.py  statistics.py  task.py  token.py  user.py
src/llm_app/queue/: task_queue.py  workers.py
src/llm_app/schemas/: document.py  file.py  statistics.py  task.py
src/llm_app/services/: auth_service.py  file_service.py  llm_service.py  statistics_service.py  task_service.py  user_service.py
src/llm_app/ui/: page_helpers.py
src/models/: __init__.py  content.py  file.py  statistics.py  task.py  token.py  user.py
src/pages/: 1_🤓_原文提取.py  2_😶‍🌫️_论文总结.py  4_🤖_论文问答.py  5_✒️_文段改写.py  6_🤯_思维导图.py
src/schemas/: file.py  user.py
src/services/: auth_service.py  file_service.py  llm_service.py  statistics_service.py  task_service.py  user_service.py
tests/: conftest.py
tests/contract/: test_auth_login.py  test_auth_register.py  test_files_list.py  test_files_upload.py
tests/integration/: test_complete_flow.py  test_document_flows.py
tests/unit/: test_api_client.py  test_auth.py  test_database.py  test_file_handler.py  test_optimizer.py  test_task_service.py  test_text_processor.py  test_user_service.py
utils/: __init__.py  page_helpers.py  task_queue.py  tasks.py  utils.py
