[project]
name = "llm-app"
version = "2.0.0"
description = "基于人工智能的文献阅读辅助工具 - AI-powered literature reading assistant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "0verL1nk", email = "OverL1nk@outlook.com"}
]
keywords = ["literature", "ai", "research", "nlp", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "streamlit>=1.40.1,<1.41.0",
    "streamlit-extras>=0.3.0",
    "streamlit-echarts>=0.4.0",
    "textract>=1.6.5,<1.7.0",
    "openai>=1.54.5,<1.55.0",
    "httpx<0.28.0",
    "pyecharts>=2.0.7,<2.1.0",
    "duckduckgo-search>=6.3.7,<6.4.0",
    "langchain>=0.3.7,<0.4.0",
    "langchain-community>=0.3.7,<0.4.0",
    "langchain-core>=0.3.19,<0.4.0",
    "dashscope>=1.17.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "six>=1.12.0,<1.13.dev0",
    "email-validator>=2.3.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
# Testing and quality assurance
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
]

# Development tools (linting, formatting, type checking)
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "types-requests",
    "types-PyYAML",
]

# Code quality
lint = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/llm-app"
Repository = "https://github.com/your-org/llm-app.git"
Documentation = "https://llm-app.readthedocs.io/"
"Bug Tracker" = "https://github.com/your-org/llm-app/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
llm-app = "llm_app.main:start"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/llm_app",
]

[tool.hatch.build.targets.wheel.force-include]
"src/llm_app/static" = "llm_app/static"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src/llm_app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/llm_app"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/src/llm_app/main.py",
    "*/src/pages/*",
    "*/pages/*",
    "*/文件中心.py",
    "*/src/llm_app/ui/*",
    "*/src/llm_app/core/logger.py",
]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
show_missing = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
title = "LLM App Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py39"
indent-width = 4
src = ["src", "tests"]
extend-include = ["*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "T20",  # flake8-print
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert statements
    "D103",  # missing docstring in public function
    "D104",  # missing docstring in public package
    "ARG001",  # unused function argument
    "S105",  # hardcoded password
    "S106",  # hardcoded password
]
"__init__.py" = [
    "F401",  # imported but unused
    "D104",  # missing docstring in public package
]
"src/llm_app/main.py" = [
    "T201",  # print statements
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MyPy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "textract.*",
    "streamlit.*",
    "pyecharts.*",
    "duckduckgo_search.*",
    "langchain.*",
    "dashscope.*",
    "redis.*",
    "rq.*",
]
ignore_missing_imports = true

# =============================================================================
# Ruff isort Configuration
# =============================================================================
[tool.ruff.lint.isort]
known-first-party = ["src.llm_app"]
force-sort-within-sections = true
combine-as-imports = true
order-by-type = true

# =============================================================================
# Bandit Configuration (Security)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B601"]

# =============================================================================
# Black Configuration (Fallback)
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.coverage
  | \.coverage.*
  | htmlcov
  | build
  | dist
  | \.pytest_cache
)/
'''

# =============================================================================
# isort Configuration (Alternative to Ruff isort)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src.llm_app"]
known_third_party = [
    "streamlit",
    "pytest",
    "langchain",
    "openai",
    "dashscope",
]
